editing down design chapter

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -155,7 +155,6 @@ In addition, work to distinguish type of learner agency including transformative
 
 
 
-
 ## Exploring issues and context from practitioner interviews and existing research
 
 While the literature on game making and other forms of digital making is extensive, much has a focus on curricula driven, personal knowledge. Research in the domain of informal learning and the resulting characteristics and emerging tensions is less prevalent. In addition the process of writing interview questions and the conversational process of semi-structured interviews helped expose new streams of thought, that which while present in existing researched helped bring them into clearer focus.
@@ -336,38 +335,15 @@ however the rationale is intact and  -->
 
 
 
-### Disambiguating terminology - Conflicts, tensions, contradictions, dilemmas
 
-
-As explored in the theoretical framework in activity theory tensions and contradictions are a vital source of change and evolution of new and ongoing activity systems.   
-
-To avoid the dangers of the vague use of the terms tensions and contractions [@karanasios_exploring_2017], this chapter will aim to be more descriptive.  
-
-While guided by the concept of analysing manifestations of systemic contradictions, [cakir_contradictions_2022; engestrom_discursive_2011] this study does not use that detailed framework
-
-NOTE - there is also the concept of congruencies - or strengths within activity systems. Where appropriate these systems strengths and positive alignments are helpful to note [@kamanga_contradictions_2021].
-
-On a smaller scale, design tensions exist. These do not block progress completely but may disrupt some activities. Combinations of tensions can compound to create longer lasting and more serious conflicts if not resolved [Engestrom early]. The concept of levels of contradictions are helpful [@sannino_cultural-historical_2018] the forth being a conflict.
-
-In Sannino's later work on transformational agency TADS conflicts are examined - greater scope than tensions - thus larger shifts are implied.
-
-It also useful to recap here the interpretations of agency explored in the theoretical framework. (NOTE IS IT OR SHOULD I JUST PICK TADS AND USE THAT LANGUAGE?) Instrumental agency is relevant here to help examine and the work of learning designers to remove  barriers, Transformational and authorial agency serves to explore the potential for learners to address and overcome tensions and conflicts in their own way.
-
-<!-- (Relational agency?) -->
-
-In the process of reflection on sessions I both observed and project tensions between activity system elements and between different scopes of activity. In response, I introduced new tools or processes or removed existing or potential barriers. I observed participants responding to tensions both in expected and novel ways.
-
-In the following sections of this chapter I focus on such which relate directly to the research questions and which help inform the findings of later chapters. In particular I draw out more visible conflicts which threaten more serious disruption of activities.
-
-
-### Description of the nested levels of activity & tools used - CHANGE TO MOSTLY SIGN POSTING - EDIT DOWN
+## Description of the nested levels of activity & tools used - CHANGE TO MOSTLY SIGN POSTING - EDIT DOWN
 
 <!-- REWRITE THE BELOW - CHANGE FOCUS TO TOOLS /RESOURCES -->
 
 Activity Theory allows researchers to identify intersecting or nested systems of activity with varied goals. These descriptions mirror the work of AT researchers who conceptualise scope of activity as concentric circles from Broffennbrenner with "larger" scopes of cultural and societal goals and smaller, narrower, lower scopes of more personal activity [Engestrom][Cole].
 
 Subsequent analysis of the identified activity systems allows both the researcher and practitioner to identifying existing and emerging tensions and to thus observe (spontaneous) or plan (designed) responses.
-A short description of the activity systems follows using the to the vignette above to anchour the process.
+A short description of the activity systems follows the vignette above to help the reader establish a broad understanding of the processes involved before further analysis. I signpost the reader to other chapters when the described activity is explored in more detail there.
 
 #### Environmental Factors and Objectives
 
@@ -379,7 +355,7 @@ More shared objectives exist within these wider aims and include: a larger-scope
 
 <!-- As previously explored this mirrors the Activity, Action and Operation hierarchy. -->
 
-NOTE - The purpose of this following description is to situate the reader in full spectrum of activities before further analysis and to give an overview of the different activity system elements in situ before exploring tensions arising between them.
+
 
 <!-- | **Subject**         | **Objective**             | **Tools & Processes**          |
 |------|-------------|------------|
@@ -397,7 +373,6 @@ Table 4.x.  Tools used in larger-scoped objective involving the wider community 
 
 In this larger scoped activity system the direct objective of the activity is to make games which are fun for the intended audience to play and which explores an environmental theme.
 
-NOTE - WHY MENTION / REVEVANT?
 As previously indicated, other high level objectives exist including: research goals on the part of the researcher/ participant; desire to create a useful learning experience on the part of student helpers; learning computing skills and concepts as a home education project; and participating with other home educators in a creative environment and thus building team and communication skills.
 
 Insert an AT diagram from here - https://docs.google.com/presentation/d/1vR6dzFG6qXIdpB_-s6PbCePiB87qTs6YAXCljxNcb5Y/edit#slide=id.g57b5e8e9ad_0_0
@@ -414,7 +389,7 @@ In the vignette of Toby's activity this wider objective is present in the facili
 
 Toby begins the game making session playing his own game which he has developed from a shared starting template. During the session he invites many other group members to play his game. He initiates and responds to may conversations around the difficultly of the game he has designed.
 
-Analysis TO COME.
+Analysis of this scope of activity is continued in chapter six.
 
 #### Smaller objective - Implementing game elements
 
@@ -433,7 +408,7 @@ Table 4.x.  Tools used in mid-level objectives when selecting and planning imple
 
 <!-- One observation from he experimental course was that without significant support, the process of making a game is complex and there are many possible blockages in the process. -->
 
-The process of making a game was driven from early stages by learners requests to implement game features which followed freely with little prompting.
+The process of making a game was driven from early stages by learners requests to implement game featu  res which followed freely with little prompting.
 
 By this stage, the process of collecting a user generated list of features and trying to respond to all of them as a facilitator had been abandoned as unrealistic. Instead a collection or menu of elements for the chosen game type of a platformer was in place. From now now these elements are named game design patterns from professional and amateur game coding terminology.
 
@@ -675,6 +650,8 @@ https://docs.google.com/document/d/1FIPn2dEB2aCKZi5z05j69cnHgpGNXFh1_SPV6h5l12g/
 
 ### Design tensions experienced as a researcher / designer
 
+In the process of reflection on sessions I both observed and project tensions between activity system elements and between different scopes of activity. In response, I introduced new tools or processes or removed existing or potential barriers. I observed participants responding to tensions both in expected and novel ways.
+
 This section is written from my own perspectives to inform discussion on design tensions. The process here is driven not only from user feedback but also on a more intuitive experience as an experienced facilitator in this field. I also draw on the tensions explored in the previous exploration of fellow participants. I  focus on tensions involving authenticity as a precursor to exploring their relationship with participation experience of agency.
 
 #### Tensions surrounding authenticity of tool use
@@ -851,9 +828,11 @@ My motivation for choice of code language (Javascript, Phaser) was driven by des
 
 In terms of technical complexity, using a code playground removed the process of setting up a server for web development, and the delay and complexity of transferring files to the server. While the code project consisted of several files of javascript, HTML and CSS, learners were shielded from the complexity of how they were interlinked. In the video data analysed, there were practically no extended blockages to undertaking work related to the use of this environment. While this study does not attempt to quantify this factor, the experience compares very favourably to my experiences of using and teaching coding environments.
 
-There were some issues of access for some participants who did not remember or recall log in details or their project name. These issues were mitigated through the use of a log in details shared between participants. When users struggled to log in or to find the games or assets that they had created earlier there sought and received help from family members or other peers. Direct help from facilitators was rarely required. In the glitch environment code errors were highlighted in with red dot in the interface which gave a quick visual indication of where the error occurred, when the user hovered over gave an error message as a pop up, which while limited and sometimes misleading, gave participants immediate feedback on syntax errors. In analysis of video data, I observed learners reacting to this feedback and either reversing errors such as deleting commas, semi-colons and quotations marks. When participants were coding as a pair, especially the parent was observing they would often notice and point out the red dot, thus preventing further errors.  The next chapter explores different types of errors and participant responses to them.
+In journal notes and in video data I observed participants developing responses to immediate barriers that the new tool introduced.
 
-![](./Pictures/codeplayground_redot.png){width=50%}
+ - Issues of access for  participants were mitigated through shared log in details and through help from family members or other peers.
+ - Code syntax errors (GL) highlighted via a red dot provided a quick visual indication of where the error occurred. In pair work the non-coding peer would often notice and point out the red dot, thus preventing further errors.  
+
 
 <!-- NOTE - LINK TO OTHER KINDS OF ERRORS - NEXT CHAPTER -->
 
