setting scene for key interventions

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -707,14 +707,16 @@ While early use of microworlds as a "acceptable" authentic-ish a concept endorse
 
 Beyond the design tensions above that were smaller in scope and addressed relatively quickly, this section examines more extensive contradictions between system elements which developed into conflicts which significant in stopping participant progress.
 
-The first which involves clashes of identity and ambition is outlined briefly and explored in more depth in a later chapter.
+The first outlines tensions due to clashes of identity and ambition. Responses are  outlined briefly here but explored in more depth in chapter six.
 
-The second frustrations due to technical processes.
+The second (move to last?) covers a range of responses to a key contradiction in early design.  frustrations due to technical processes deals with
+
+The third is details resources created to align the game making programme school and curricular activities.  
 
 
 
 
-### 1. Identity hardcore coding & disfunctional group work - P1 - COMPRESS AND SIGNPOST
+## 1. Identity hardcore coding & dysfunctional group work - P1 - COMPRESS AND SIGNPOST
 
 **Participants stuck / demotivated : scope of ambition to high,  clashes of identity not hard core coders, no on-going playtesting, collaboration groups too big (transition),**
 
@@ -734,66 +736,44 @@ While members of this family were able to engage in planing via sketching on pap
 
 The freedom of choice and imagination allowed by desining on paper and via pixel art created compounding tensions. One crisis point involved a frustration of a child who was not able to implement a feature they wanted to add to the game next:
 
-#### Discussion on Authenticity within this conflict and playground as resolution
-
-What does authenticity of tools mean in this context and configuration?
-CROSSREF - CALL BACK TO DISCUSSION OF AUTHENTICITY IN LITERATURE REVIEW.
-
-- similar to workplace
-- has a real purpose for Participants
-- can be showcased in public for an external audience
-
-The process of using coding tools is authentic but challenging.
-The creation of a template and mini challenges helped address this.
-
-For example in p1 iteration, code framework is authentic, js. code playground less so aimed at learners, and the process unstrucutred.
-
-While tempting to say that the use of a template is eductional scaffolding and therefore not authentic to a work place setting environment
-
-While, initially conceived as a starting activity, many learners stuck with those possibilities for a long period of time.
 
 
 
 
-### 2. Participant conflict due to lack of relevant technical support
+## 2. Participant conflict due to lack of relevant technical support
 
-**Frustrating delays - Not enough support from facilitator/s:  especially tech help - no dedicated documents, exiting docs not learner focused, coding process frustrating needing**
+### Notes on structure of this section
 
-As P1 of the program developed from
+**Nature of conflict - Frustrating delays - Not enough support from facilitator/s:  especially tech help - no dedicated documents, exiting docs not learner focused, coding process frustrating needing**
 
-the program develop
+This conflict, which surfaced in P1, was a  conflation of various tension which stemmed from lack of computer coding ability and lack of access to relevant technical support. While tensions between lack of knowledge in how to undertake activities are common in learning environments, the informal nature of this learning setting made most classroom approaches unsuitable.
 
-The nature of this conflict stemmed from tensions surrounding and knowledge of coding and lack of access to relevant technical support.
 
-The conflict was distinct from the previous one in that it related less to identity and alienation from the whole process and was manifested in periods of frustration and inactivity where participants wanted to progress but were unable to.
+I began by mirroring social model of learning like CoL and CoP and their propose apprenticeship-based approaches. Specifically, introducing possible code solutions to implement the ideas of participants. However, limits to my time involvement and my technical fluency hindered this process creating stress in myself and frustration and hesitancy on participants to get direct help.
 
-While tensions between lack of knowledge in how to undertake activities are common in learning environments, the informal nature of this learning setting made most classroom approaches unsuitable.
+    NOTE - Examples drop?
+    For example, to troubleshoot a code error might take between one minute and 10 minutes depending on the complexity of it. To work with participants to identify and then implement a new coding structure could take up to 30 minutes.
 
-More social model of learning often propose social apprenticeship approaches.
+    At times I was able to identify a discreet new code construct and to implement an example of this between sessions. At times I would attempt to do this in the group setting with varying results.
 
-In this setting there were limits to this approach due to the limits of my attention, and also limits in terms of my technical fluency in the details of the language and framework being used.
+    Other interventions were called for directly by parents. Two relevant and relates requests happened at the end of P1.
 
-For example, to troubleshoot a code error might take between one minute and 10 minuted depending on the complexity of it. To work with participants to identify and then implement a new coding structure could take up to 30 minutes.
+    One was a call for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an studio approach. Another was a request for additional supporting resources which explained the coding structures used in accessible but detailed ways. A request which hinted at a more structured, instruction based approach.
 
-At times I was able to identify a discreet new code construct and to implement an example of this between sessions. At times I would attempt to do this in the group setting with varying results.
+    However, interview data from participants placed great value on the flexibility of the approach which allowed participants to choose what they wanted to add to their game next.
+
 
 Based on group work with adults on creating media projects together I created an email group that all participants could post to to ask for help. However this option was hardly ever used taken up. I was given feedback from one parent that asking on for technical help via an email forum not something that they felt comfortable doing. The same family also gave useful feedback about social norms of not bothering people getting in the way of asking for help.
 
 Thus other ways of addressing this conflict were called for.
 
-The need to get started somewhere emerged - and the template was a response to that.
-Just an immediate, intuitive way to bring something to the table as a starting point to develop.
-The template was based on a prominent tutorial on the phaser website called Making your first game.
-https://web.archive.org/web/20180426051205/http://phaser.io/tutorials/making-your-first-phaser-2-game
+<!-- The need to get started somewhere emerged - and the template was a response to that.
+Just an immediate, intuitive way to bring something to the table as a starting point to develop. The template was based on a prominent tutorial on the phaser website called Making your first game.
+https://web.archive.org/web/20180426051205/http://phaser.io/tutorials/making-your-first-phaser-2-game -->
 
-As preparation for the sessions I had followed the tutorial. When the  and adapted it. I removed out as much code as possible and thus simplifying the structure and readability.
+<!-- As preparation for the sessions I had followed the tutorial. When the  and adapted it. I removed out as much code as possible and thus simplifying the structure and readability.
   https://github.com/glitch-game-club/glitch-game-club/blob/master/games
-
-Other interventions were called for directly by parents. Two relevant and relates requests happened at the end of P1.
-
-One was a call for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an studio approach. Another was a request for additional supporting resources which explained the coding structures used in accessible but detailed ways. A request which hinted at a more structured, instruction based approach.
-
-However, interview data from participants placed great value on the flexibility of the approach which allowed participants to choose what they wanted to add to their game next.
+ -->
 
  <!-- NOTE - I am not totally sure it is necessary. Could it be collapsed or presented in another part of this chapter.
  NOTE - Try to summarise exactly what the message is here.  
@@ -931,6 +911,9 @@ DEVELOP THIS SECTION -->
 - This research also supports other research on the attraction (and motivation) of retro, (introduction) on culture and livingstone, sefon-green. -->
 
 
+
+
+
 ### Discussion on Authenticity of Tools
 
 NOTE - Section moved from conclusion.
@@ -944,6 +927,25 @@ The partially working environment and immediate feedback this allowed also gave 
 These observations support existing research on computing projects in the work of Papert [-@papert_mindstorms_1980] on Mircoworlds and subsequent research on programming tools in the constructionist tradition [@kafai_constructionism_1996-1; @kafai_mindstorms_2014]. In this study, in contrast to the specially created tools of Scratch and Logo, the protected Microworld is built as a shield area within a more genuine ecology of authentic tool use and practices.
 
 While the use of authentic tools and processes, while challenging for novices, can be facilitated by careful alignment of key design principles and other pedagogies. For example, while the complexity of authentic text code languages and authentic developer focused documentation can be intimidating, a following chapter explores the potential for drama processes to address learner anxiety in this domain.
+#### Discussion on Authenticity within this conflict and playground as resolution
+
+What does authenticity of tools mean in this context and configuration?
+CROSSREF - CALL BACK TO DISCUSSION OF AUTHENTICITY IN LITERATURE REVIEW.
+
+- similar to workplace
+- has a real purpose for Participants
+- can be showcased in public for an external audience
+
+The process of using coding tools is authentic but challenging.
+The creation of a template and mini challenges helped address this.
+
+For example in p1 iteration, code framework is authentic, js. code playground less so aimed at learners, and the process unstrucutred.
+
+While tempting to say that the use of a template is eductional scaffolding and therefore not authentic to a work place setting environment
+
+While, initially conceived as a starting activity, many learners stuck with those possibilities for a long period of time.
+
+
 
 
 ### ORIGINAL SECTION
