moving the templte

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -788,7 +788,12 @@ https://web.archive.org/web/20180426051205/http://phaser.io/tutorials/making-you
 
 <!-- NOTE - USE MICROWORLD OR NOT AS CONCEPT IN THIS CHAPTER? -->
 
-The last chapter outlined the design characteristics of the coding tools in a face-to-face learning environment, namely: an incomplete 2D platformer; pixel graphics; with graphical scaffolding for text-based code; and deliberately incomplete thus inviting improvement. In this section, I draw on my journal notes and past experience and observations from interpretation of video data to share observations on the use of these tools.
+The this section outlines the design characteristics of the coding tools in a face-to-face learning environment, namely: an incomplete 2D platformer; pixel graphics; with graphical scaffolding for text-based code; and deliberately incomplete thus inviting improvement.
+
+
+NOTE - HOW MUCH ON IMPACT? HOW MUCH IN CH5?
+
+In this section, I draw on my journal notes and past experience and observations from interpretation of video data to share observations on the use of these tools.
 
 <!-- Make point that it is hard to separate out tools and communities. In case of Mozilla, code playgrounds, and teach the web, and the culture of developers and teaching communities they are interlinked. Discuss and compare to Kafai in book, the lineage of Logo, Scratch. Instead the more authentic approach of a real language.
 -->
@@ -817,11 +822,16 @@ In journal notes and in video data I observed participants developing responses 
 <!-- NOTE - LINK TO OTHER KINDS OF ERRORS - NEXT CHAPTER -->
 
 
-### Impact of the half-baked game template
+### Design and observations on the use of the  half-baked game template
 
 <!-- NOTE SOME OF THIS CAN  -->
 
-As explored in the last chapter, participants starting with an incomplete game template to scaffold the initial creative and coding process.
+
+At the start of P3 I further adapted a game template used in a Phaser tutorial and other techniques I had encountered in similar resources. Thus, the learning design started to follow the Use-Modify-Create model to build familiarity with and to scaffold the adaptation and use of coding constructs [@lee_computational_2011].
+
+In line with this research, I posited that using a starting template would to increase speed and consistency of feedback from learner input, reduce coding syntax knowledge needed to progress, and thus reduce learner anxiety for novices. This approach responds to the feedback from the participant that greater time allocated to hands-on use of tools before making design decisions would be welcome.
+
+The impact of this starting template in the P3 and P4 sessions is explored in the following chapter in greater detail.
 
 <!-- In phase one, I noted that any addition to the game in terms of adding new any quantity of code created many potential coding, conceptual and organisational challenges. To counter this I adapted the starting game template to allow changes in code were relatively easy to perform but which resulted in potentially large changes in game behaviour and appearance. -->
 
@@ -853,19 +863,27 @@ As the end process is visible in fluid behaviour -->
 
 <!-- While the design suits repeated design practice as illustrated by the example above, not all pairs or individuals interacted with GDP in such a neat way.
 A later discussion section in this chapter illustrates a more complex interaction with design stages. -->
+#### Design behaviours encouraged through use of game template
 
-These observations build on the description of the game template in the last chapter.
+The following sections are observations on design behaviour  that I encouraged through tool choice and design
 
-**Variable editing for movement:** Participants needed to change the code to allow effective player movement. This thus forced all participants to alter at least one of the key variables were highlighted at the very start of the game code. Following this first change however behaviour varied greatly. While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others, mostly adults or younger participants, were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement.
+####**Variable editing for movement:**
 
-**Level design and prototyping:** The starting game template included a minimal amount of platforms, hazards to avoid and golden blocks to collect. Many participants spent significant time and effort on level design both in initial stage and in subsequent sessions, undertaking many iterations of changes to the level design. As explored in the vignette in the previous chapter, Toby and several others designed to make the game challenging but still technically possible. In contrast, two participants played with the convention of the game by removing all hazards and filling the screen with rewards/coins.
+
+Participants needed to change the code to allow effective player movement. This thus forced all participants to alter at least one of the key variables were highlighted at the very start of the game code. Following this first change however behaviour varied greatly. While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others, mostly adults or younger participants, were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement.
+
+####**Level design and prototyping:**
+
+The starting game template included a minimal amount of platforms, hazards to avoid and golden blocks to collect. Many participants spent significant time and effort on level design both in initial stage and in subsequent sessions, undertaking many iterations of changes to the level design. As explored in the vignette in the previous chapter, Toby and several others designed to make the game challenging but still technically possible. In contrast, two participants played with the convention of the game by removing all hazards and filling the screen with rewards/coins.
 
 <!-- The vignette in the last chapter saw Toby's adding new levels to his game and undertaking many iterations of changes to the level design.  -->
 
 <!-- The possibility of disturbing the syntax of the  of code in the array. When participant did this it provided a good opportunity for facilitators or parents to outline the importance of correct syntax of and to explain the code structure. -->
 
 
-**Use of pixel art to seed narrative and art creativity:** One activity that all participants spent some time on was to replace the coloured block of the starting template with pixel art sprites created using the Piskel tool. Participant spent a widely different length of time creating these graphics. Some took a long time to master the process of using the editing tool. Some others struggled with the process of exporting the images to the code editor. Others were relatively rapid in creation but returned to alter their creations. As they had been guided to make a game on a broadly environmental theme. Participants often redesigned sprites to games involving animals. The following image shows a whale as a player character and plastic bottles.
+####**Use of pixel art to seed narrative and art creativity:**
+
+One activity that all participants spent some time on was to replace the coloured block of the starting template with pixel art sprites created using the Piskel tool. Participant spent a widely different length of time creating these graphics. Some took a long time to master the process of using the editing tool. Some others struggled with the process of exporting the images to the code editor. Others were relatively rapid in creation but returned to alter their creations. As they had been guided to make a game on a broadly environmental theme. Participants often redesigned sprites to games involving animals. The following image shows a whale as a player character and plastic bottles.
 
 ![](./Pictures/whale_1.png){width=50%}
 
@@ -927,6 +945,7 @@ The partially working environment and immediate feedback this allowed also gave 
 These observations support existing research on computing projects in the work of Papert [-@papert_mindstorms_1980] on Mircoworlds and subsequent research on programming tools in the constructionist tradition [@kafai_constructionism_1996-1; @kafai_mindstorms_2014]. In this study, in contrast to the specially created tools of Scratch and Logo, the protected Microworld is built as a shield area within a more genuine ecology of authentic tool use and practices.
 
 While the use of authentic tools and processes, while challenging for novices, can be facilitated by careful alignment of key design principles and other pedagogies. For example, while the complexity of authentic text code languages and authentic developer focused documentation can be intimidating, a following chapter explores the potential for drama processes to address learner anxiety in this domain.
+
 #### Discussion on Authenticity within this conflict and playground as resolution
 
 What does authenticity of tools mean in this context and configuration?
@@ -959,21 +978,7 @@ Fig 4.x, Changes made to the code on the left section take immediate effect in t
 
 The a game template served to remove technical barriers to getting immediate feedback and offered other affordances explored in the next section.
 
-**Structuring a game template**
 
-In response, at the start of P3 I further adapted a game template used in a Phaser tutorial and other techniques I had encountered in similar resources. Thus, the learning design started to follow the Use-Modify-Create model to build familiarity with and to scaffold the adaptation and use of coding constructs [@lee_computational_2011].
-
-DESCRIBE IN MORE DETAIL THE AFFORDANCES?
-
-FIND MORE ON BLOCKS ETC
-EXAMPLE OF CODE STRUCTURE?
-  - USE OF PHASER 2?
-  - BLOCK SIZE TO MATCH PISKEL
-
-
-In line with this research, I posited that using a starting template would to increase speed and consistency of feedback from learner input, reduce coding syntax knowledge needed to progress, and thus reduce learner anxiety for novices. This approach responds to the feedback from the participant that greater time allocated to hands-on use of tools before making design decisions would be welcome.
-
-The impact of this starting template in the P3 and P4 sessions is explored in the following chapter in greater detail.
 
 **Linear and stand-alone tutorial and code snippet resources**
 
