--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -1194,7 +1194,7 @@ Extra missions which highlight game challenge and user experience may help learn
 
 Ultimately, I gave up on this approach as it did not align with the view of agency that I was trying to create in the learning environment.
 
-Unknowingly aligning with Matusov's discussion on the negative impact on authorial agency of processes designed to align with curricular goals, I put off introducing the learning map in to the teaching of  
+Unknowingly aligning with Matusov's discussion on the negative impact on authorial agency of processes designed to align with curricular goals, I put off introducing the learning map in to the informal design process. 
 
 
 #### Limits to the learning dimensions map in an informal setting
